# python-template-project

./: pyproject.toml
examples/: kafka.py
src/: config.py  main.py
src/utils/: toml_settings.py
src/utils/kafka/: consumer.py  producer.py
src/utils/logger/: __init__.py  async_logstash_handler.py  contextualize.py  init_logger_handlers.py
template.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
