[project]
name = "template"
version = "0.0.1"
authors = [{ name = "Dmitriy L" }]
requires-python = ">=3.11"
dependencies = [
    "loguru==0.7.3",
    "pydantic==2.11.7",
    "pydantic-settings==2.10.1",
    "python-logstash-async==4.0.2",
    "confluent_kafka",
]

[tool.setuptools.packages.find]
include = ["src*"]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
